{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 28,
  "lineage": "f0d62db0-b71e-545c-257c-b9e9a23352e0",
  "resources": [
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1a7f89451184c8b",
            "arn": "arn:aws:ec2:ap-south-1:423162214320:instance/i-010111e6b67887c50",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010111e6b67887c50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04cb8140e6bc4223c",
            "private_dns": "ip-10-0-1-157.ap-south-1.compute.internal",
            "private_ip": "10.0.1.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bf9bdd9407f04434",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06252a05663194db3",
            "tags": {
              "Name": "application"
            },
            "tags_all": {
              "Name": "application"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09db8bad77e672dd8"
            ]
          },
          "dependencies": [
            "module.SecurityGroup.aws_security_group.private-SG",
            "module.subnet.aws_subnet.bank-private-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1a7f89451184c8b",
            "arn": "arn:aws:ec2:ap-south-1:423162214320:instance/i-030aefffead685b62",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030aefffead685b62",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03f698dad41b92b71",
            "private_dns": "ip-10-0-0-205.ap-south-1.compute.internal",
            "private_ip": "10.0.0.205",
            "public_ip": "3.6.40.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c2794ae1d83367c4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d60f80d8ecf27c7",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0868a519d4215de6b"
            ]
          },
          "dependencies": [
            "module.SecurityGroup.aws_security_group.public-SG",
            "module.subnet.aws_subnet.bank-public-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.IGW",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bank-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423162214320:internet-gateway/igw-0b1da5bffbcc39248",
            "id": "igw-0b1da5bffbcc39248",
            "owner_id": "423162214320",
            "tags": {
              "Name": "bank-IGW"
            },
            "tags_all": {
              "Name": "bank-IGW"
            },
            "vpc_id": "vpc-09b18d6e07bb0ce9e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.bank-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.NGW",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bank-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-048ce168bbda727a3",
            "domain": "vpc",
            "id": "eipalloc-0827d37b0230ea5cd",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0f2466682f45831f5",
            "private_dns": "ip-10-0-0-159.ap-south-1.compute.internal",
            "private_ip": "10.0.0.159",
            "public_dns": "ec2-3-109-134-215.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.134.215",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.NGW",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "bank-NGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0827d37b0230ea5cd",
            "connectivity_type": "public",
            "id": "nat-0a3ddf28bcec777c6",
            "network_interface_id": "eni-0f2466682f45831f5",
            "private_ip": "10.0.0.159",
            "public_ip": "3.109.134.215",
            "subnet_id": "subnet-02d60f80d8ecf27c7",
            "tags": {
              "Name": "bank-NGW"
            },
            "tags_all": {
              "Name": "bank-NGW"
            }
          },
          "dependencies": [
            "module.NGW.aws_eip.bank-EIP",
            "module.subnet.aws_subnet.bank-public-subnet",
            "module.vpc.aws_vpc.bank-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.RouteTable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423162214320:route-table/rtb-0315758ce530a1b67",
            "id": "rtb-0315758ce530a1b67",
            "owner_id": "423162214320",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a3ddf28bcec777c6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-RT"
            },
            "tags_all": {
              "Name": "private-RT"
            },
            "vpc_id": "vpc-09b18d6e07bb0ce9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet.aws_subnet.bank-public-subnet",
            "module.vpc.aws_vpc.bank-vpc",
            "module.NGW.aws_eip.bank-EIP",
            "module.NGW.aws_nat_gateway.bank-NGW"
          ]
        }
      ]
    },
    {
      "module": "module.RouteTable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423162214320:route-table/rtb-05d496150a5571742",
            "id": "rtb-05d496150a5571742",
            "owner_id": "423162214320",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b1da5bffbcc39248",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-RT"
            },
            "tags_all": {
              "Name": "public-RT"
            },
            "vpc_id": "vpc-09b18d6e07bb0ce9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.IGW.aws_internet_gateway.bank-IGW",
            "module.vpc.aws_vpc.bank-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.SecurityGroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423162214320:security-group/sg-09db8bad77e672dd8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09db8bad77e672dd8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "SSH from bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-SG",
            "name_prefix": "",
            "owner_id": "423162214320",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-SG"
            },
            "tags_all": {
              "Name": "private-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b18d6e07bb0ce9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.bank-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.SecurityGroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423162214320:security-group/sg-0868a519d4215de6b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0868a519d4215de6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from all traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-SG",
            "name_prefix": "",
            "owner_id": "423162214320",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-SG"
            },
            "tags_all": {
              "Name": "public-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b18d6e07bb0ce9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.bank-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bank-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423162214320:subnet/subnet-06252a05663194db3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06252a05663194db3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423162214320",
            "tags": {
              "Name": "bank-private-subnet"
            },
            "tags_all": {
              "Name": "bank-private-subnet"
            },
            "vpc_id": "vpc-09b18d6e07bb0ce9e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.bank-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bank-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423162214320:subnet/subnet-02d60f80d8ecf27c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-02d60f80d8ecf27c7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423162214320",
            "tags": {
              "Name": "bank-public-subnet"
            },
            "tags_all": {
              "Name": "bank-public-subnet"
            },
            "vpc_id": "vpc-09b18d6e07bb0ce9e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.bank-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bank-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423162214320:vpc/vpc-09b18d6e07bb0ce9e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-093d375620f013db9",
            "default_route_table_id": "rtb-04762d92f203950d3",
            "default_security_group_id": "sg-0be905ed361c49d26",
            "dhcp_options_id": "dopt-bc5becd7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09b18d6e07bb0ce9e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04762d92f203950d3",
            "owner_id": "423162214320",
            "tags": {
              "Name": "bank-vpc"
            },
            "tags_all": {
              "Name": "bank-vpc"
            }
          }
        }
      ]
    }
  ]
}